# ReadingCLI

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  default.txt
.github/workflows/: ci.yml
docs/: code-walkthrough.md  roadmap.md
docs/references/: genact-analysis.md
docs/superpowers/: global-dev-journal.md
docs/superpowers/debug-logs/: 2026-06-11-dynamic-pagination-debug.md  2026-06-24-jieba-highlight-render-debug.md
docs/superpowers/plans/: 2026-04-29-reading-cli-v0.1.md  2026-05-22-text-source-cache.md  2026-06-23-jieba-pos-highlight.md
docs/superpowers/specs/: 2026-04-29-reading-cli-v0.1-design.md
examples/: analyzer_probe.rs  ltp_news_probe.rs
src/: app.rs  cli.rs  lib.rs  library.rs  main.rs  metadata.rs  page_index.rs  page_layout.rs  session.rs  text_source.rs  tui.rs
src/cover/: context.rs  data.rs  engine.rs  frame.rs  generators.rs  mod.rs  module.rs  op.rs  registry.rs  terminal.rs
src/cover/modules/: cargo.rs  download.rs  mod.rs  weblog.rs
src/highlight/: analyzer.rs  annotation.rs  jieba_analyzer.rs  ltp_legacy_analyzer.rs  mod.rs  render.rs  store.rs
src/tui/: events.rs  highlight_cache.rs  mod.rs  screens.rs  state.rs  terminal.rs
tests/: cover_tests.rs  highlight_tests.rs  library_tests.rs  page_index_tests.rs  page_layout_tests.rs  session_tests.rs  text_source_tests.rs
