[package]
name = "reading_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
encoding_rs = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossterm = "0.29"
unicode-width = "0.2"
ratatui = "0.29"
tui-input = "0.12"
time = "0.3"

[dev-dependencies]
tempfile = "3"
