[package]
name = "reading_cli"
version = "0.4.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
encoding_rs = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossterm = "0.29"
chrono = { version = "0.4", features = ["clock"], default-features = false }
fake = { version = "5", features = ["chrono"] }
humansize = "2"
humantime = "2"
jieba-rs = "0.10"
ltp = { version = "0.1.9", features = ["serialization"] }
unicode-width = "0.2"
ratatui = "0.29"
rand = "0.10"
rand_distr = "0.6"
progress_string = "0.2"
tui-input = "0.12"
time = "0.3"

[dev-dependencies]
tempfile = "3"
